data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1686.wast
;; 7. **Test Description:** Test `br_if` where initial stack has insufficient items followed by a push to simulate normal stack state, validating condition under-polymorphic stack handling.    - **Specific Constraint:** Evaluate condition handling with pre and post stack state manipulations.    - **Relation to Incorrect Condition Evaluation:** Ensures polymorphic stack condition evaluations cater to dynamic stack changes.

(assert_invalid
  (module
    (func $test-br_if-stack-polymorphism
      (block
        (i32.const 1)
        (br_if 0)
        (i32.const 2) (i32.add)
      )
    )
  )
  "type mismatch"
)